[package]
name = "nostr-rs-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.14", features = ["toml"] }

tracing = "0.1"
tracing-subscriber = "0.3"

futures-channel = "0.3"
futures-util = "0.3"
futures = "0.3"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

nostr = "0.39.0"
lru = "0.13.0"
thiserror = "2.0.11"
